<resources>
    <string name="app_name">Love Meeeh!</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_sheep_data">New Sheep Data</string>
    <string name="insert_data">Insert Data</string>
    <string name="view_all">View All</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="choose_color">Choose Color:</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_age">Enter age</string>
</resources>
