<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".NewSheepForm"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/new_sheep_data"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:weightSum="1">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_sheep_name"
            android:hint="@string/enter_name"
            android:inputType="textPersonName|textCapWords"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/et_sheep_age"
            android:hint="@string/enter_age"
            android:maxLength="2"
            android:layout_gravity="center_horizontal"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/choose_color"
                android:paddingLeft="5dp"
                android:layout_weight="1"
                />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="15dp"
                android:id="@+id/rg_sheep_color" android:orientation="horizontal"
                android:layout_weight="2"
                >


                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/white"
                    android:id="@+id/rb_white"
                    android:checked="true"
                    android:layout_weight="1"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/black"
                    android:layout_weight="1"
                    android:id="@+id/rb_black" />





            </RadioGroup>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/insert_data"
            android:id="@+id/b_insert"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:enabled="false" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_all"
            android:id="@+id/b_view"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</LinearLayout>
